<resources>
    <string name="app_name">Android-Application</string>
    <string name="main_title">Все фильмы</string>
    <string name="profile">Профиль</string>
    <string name="favourite">Понравившееся</string>
    <string name="home">Главная</string>
    <string name="search">Поиск</string>
    <string name="in_progress">В разработке</string>
    <string name="profile_et_name">Имя</string>
    <string name="profile_et_email">e-mail</string>
    <string name="profile_et_password">password</string>
    <string name="profile_btn_exit">Выйти</string>
    <string name="profile_btn_sign">Авторизоваться</string>
    <string name="favourite_toolbar_title">Понравивилось</string>
    <string name="options_title">Параметры</string>
    <string name="title_activity_sign">SignActivity</string>
    <string name="prompt_email">Логин</string>
    <string name="prompt_name">Имя</string>
    <string name="prompt_password">Пароль</string>
    <string name="action_sign_in">Войти</string>
    <string name="action_sign_up">Зарегистрироваться</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="edit_toolbar_title">Параметры</string>
    <string name="film_et_name">Название</string>
    <string name="film_et_description">Описание</string>
    <string name="options_genre">Жанр</string>
    <string name="options_country">Страна</string>
    <string name="options_year">Год</string>
    <string name="options_year_from">От</string>
    <string name="options_year_to">До</string>
    <string name="options_rating">Рейтинг</string>
    <string name="options_cancel">Сбросить</string>
    <string name="film_et_producer">Режисер</string>
    <string name="fab_edit_title">Добавить</string>
    <string name="menu_film_edit_title">Изменить</string>
    <string name="menu_film_delete_title">Удалить</string>
    <string name="label_delete">Удалить?</string>
    <string name="label_rate">Оценить?</string>
    <string name="text_question_sure_delete">Вы уверены, что хотите удалить фильм?</string>
    <string name="text_question_sure_rate">Подтвердите свою оценку</string>
    <string name="label_yes_sure">Да, уверен</string>
    <string name="label_yes">Да</string>
    <string name="label_cancel">Отмена</string>
    <string name="text_delete_canceled">Удаление отменено</string>
    <string name="text_rate_canceled">Оценка отменена</string>
    <string name="text_not_complete">Не все поля заполнены!</string>
    <string name="wrong_url">Неверный формат URL-ссылки</string>
    <string name="text_sign_up_incorrect">Неверный логин или пароль</string>
    <string name="text_sign_up_already_exist">Пользователь с таким логином уже существует</string>
    <string name="text_sign_up_wrong_password">Пароль должен содержать не менее 8 символов, хотя бы 1 цифру и не должен содержать пробелов</string>
    <string name="text_film_fields_complete">Заполнены не все поля</string>
    <string name="text_changes_saved">Изменения сохранены</string>
    <string name="label_save">Сохранить</string>
    <string name="label_add">Добавить</string>
    <string name="label_change">Изменить</string>
    <string name="text_question_add_alert">Заполните все поля</string>
    <string name="text_cinema_add_complete">Изменения успешно сохранены</string>
    <string name="you_are_not_authorized">Вы не авторизованы, войдите для просмотра</string>
    <string name="not_authorized_btn_enter">Войти</string>
    <string name="wrong_email">Неверный формат email-адреса</string>
    <string name="edit_rating">Рейтинг imdb</string>
</resources>