<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.mainscreen.fragments.FavoriteFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/favourite_app_bar"
        style="Widget.MaterialComponents.Toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_primary"
        android:fitsSystemWindows="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/favourite_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_primary"
            android:minHeight="?attr/actionBarSize"
            app:title="@string/favourite_toolbar_title"
            app:titleMarginStart="@dimen/spacing_huge_32"
            app:titleTextAppearance="?attr/textAppearanceHeadline6"
            app:titleTextColor="@color/color_text_dark"></com.google.android.material.appbar.MaterialToolbar>
    </com.google.android.material.appbar.AppBarLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycle_view_favorite"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="visible"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/favourite_app_bar"
        app:spanCount="3"
        tools:listitem="@layout/item_card_view" />


    <TextView
        android:id="@+id/tv_not_authorized_favor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/you_are_not_authorized"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_not_authorized_favor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_maximum_72"
        android:layout_marginTop="@dimen/spacing_huge_32"
        android:layout_marginEnd="@dimen/spacing_maximum_72"
        android:backgroundTint="@color/color_secondary"
        android:text="@string/not_authorized_btn_enter"
        android:textColor="@color/color_text_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_not_authorized_favor" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group_unsignet_favor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="tv_not_authorized_favor,btn_not_authorized_favor" />
</androidx.constraintlayout.widget.ConstraintLayout>